# pawcast

./: .env.example  .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt
backend/: database.py  main.py  models.py
backend/routers/: autocomplete.py  dogs.py  walks.py  weather.py
backend/services/: mood_content.py  mood_engine.py  weather_service.py
